allo scroll la navbar prende l'averagecolor come background e arrotonda gli spigoli sopra

--- a/AlbumPage.html
+++ b/AlbumPage.html
@@ -150,7 +150,7 @@
 
         <main class="col col-xl-8 rounded" data-bs-theme="dark">
           <div class="bg-darkness rounded" style="height: 90vh">
-            <div class="d-flex align-items-center p-3" id="coloredNavbar">
+            <div class="d-flex align-items-center p-3 rounded-top-3" id="coloredNavbar">
               <div class="me-auto d-flex">
                 <button
                   onClick="history.back()"
