--- a/AlbumPage.html
+++ b/AlbumPage.html
@@ -389,8 +389,8 @@
                     <table class="table-dark text-white mt-4 ms-5" id="tracksTable">
                       <thead class="border-bottom border-secondary">
                         <tr>
-                          <th scope="col" class="col-2">#</th>
-                          <th scope="col " class="col-10 d-inline-block pb-3 mt-3">Titolo</th>
+                          <th scope="col" class="">#</th>
+                          <th scope="col " class="d-inline-block pb-3 mt-3">Titolo</th>
                           <th scope="col" class="d-none d-xxl-table-cell">Riproduzioni</th>
                           <th scope="col" class="d-none d-lg-table-cell">
                             <svg
