--- a/artists.html
+++ b/artists.html
@@ -573,6 +573,7 @@
                   </div>
                   <div class="d-flex justify-content-center align-items-center">
                     <button
+                      id="pause"
                       class="btn bg-white rounded-circle d-flex align-items-center"
                       style="height: 40px; width: 40px"
                     >
@@ -604,14 +605,14 @@
                   </div>
                 </div>
                 <div class="d-flex justify-content-between align-items-center">
-                  <div id="currentTime"></div>
+                  <div id="currentTime">0:00</div>
                   <div id="line" class="line">
                     <audio id="audioPlayer" class="d-none" controls>
                       <source type="audio/mpeg" />
                     </audio>
                     <div id="lineChild" class="lineChild"></div>
                   </div>
-                  <div id="totalDuration"></div>
+                  <div id="totalDuration">3:00</div>
                 </div>
               </div>
               <div class="d-flex align-items-center">
