add funct volume

--- a/artists.html
+++ b/artists.html
@@ -673,7 +673,7 @@
                 </button>
 
                 <div class="d-flex align-items-center">
-                  <input type="range" class="form-range" id="customRange1" style="width: 60px" />
+                  <input type="range" class="form-range" id="volumeControl" style="width: 60px" />
                 </div>
 
                 <button class="btn">
